# rgb11

./: .gitignore  LICENSE  OFFICIAL_INTEROP.md  README.md  TARGET1_EVIDENCE.md  UPSTREAM_MANIFEST.json  go.mod  go.sum
anchors/: close_method.go  commitment_test.go  mpc.go  mpc_test.go  opret.go  tapret.go
assetid/: assetid.go  assetid_test.go
baid64/: baid64.go  baid64_test.go  mnemonic_words.go
browser/: esplora.go  esplora_test.go
consensus/: id.go  id_test.go  merkle.go  merkle_test.go  tagged_hash.go  tagged_hash_test.go
consignment/: armor.go  armor_test.go  base85.go  bitcoin.go  builder.go  builder_test.go  container.go  container_test.go  dag.go  encode.go  globals_test.go  id.go  id_test.go  merge.go  merge_test.go  reveal.go  validator.go  validator_test.go
invoicing/: amount.go  invoice.go  invoice_test.go  types.go
issuance/: issuance.go  issuance_test.go
operations/: builder.go  builder_test.go  bundle.go  bundle_test.go  disclose.go  genesis.go  genesis_test.go  opout.go  opout_test.go  oracle_all_schemas_test.go  transition.go  transition_test.go
psbt/: keys.go  keys_test.go
reference/: README.md  check_interop.mjs  check_official_cli.mjs  check_vectors.mjs
reference/rgb-lib-wallet/: Cargo.toml  README.md
reference/rgb-lib-wallet/src/: main.rs
reference/rust/: Cargo.toml
reference/rust/src/: main.rs
rejectlist/: rejectlist.go  rejectlist_test.go
relay/: records.go  records_test.go
schemas/: catalog.go  catalog_test.go  commit.go  commit_test.go  ifa_transition_test.go  metadata.go  metadata_test.go  outputs.go  validate.go  (+3 more)
(+43 files in other folders)
