[package]
name = "rgb11-reference"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
bitcoin = "=0.32.101"
rgb-consensus = "=0.11.1-rc.11"
rgb-ops = { version = "=0.11.1-rc.11", features = ["serde"] }
rgb-psbt-utils = "=0.11.1-rc.11"
rgb-schemas = { version = "=0.11.1-rc.11", default-features = false }
rgb-ascii-armor = "=1.0.2"
rgb-strict-encoding = { version = "=1.0.2", features = ["bitcoin"] }
rgb-strict-types = { version = "=1.0.2", features = ["serde"] }
serde_json = "=1.0.149"
